--- a/java/mongodb/app/build.gradle
+++ b/java/mongodb/app/build.gradle
@@ -12,10 +12,19 @@ repositories {
 dependencies {
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'org.mongodb:mongodb-driver-reactivestreams:4.6.0'
+    implementation 'io.projectreactor:reactor-core:3.4.17'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
+
+    implementation platform('software.amazon.awssdk:bom:2.17.181')
+    implementation 'software.amazon.awssdk:sts'
+    implementation 'software.amazon.awssdk:url-connection-client'
 }
 
 mainClassName = 'mongodb.App'
 task fatJar(type: Jar) {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     manifest {
         attributes 'Main-Class': "${mainClassName}"
     }
