--- a/.github/workflows/set-version.yaml
+++ b/.github/workflows/set-version.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: set-version
         run: |
           git config user.name "github-actions[bot]"
-          git config user.email ''
+          git config user.email ""
           echo "${{ inputs.version }}" > VERSION
           git add VERSION
           git commit --allow-empty -m "set version ${{ inputs.version }}"
@@ -34,7 +34,7 @@ jobs:
           retries=${{ inputs.retries }}
 
             git fetch
-            git rebase origin/${git branch --show-current}
+            git rebase origin/$(git branch --show-current)
 
           until git push --follow-tags; do
             retries=$((retries-1))
@@ -43,6 +43,6 @@ jobs:
               exit 1
             fi
             git fetch
-            git rebase origin/${git branch --show-current}
+            git rebase origin/$(git branch --show-current)
           }
           done
