--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  workflow_run:
+    workflows: [set version]
+    types: [completed]
 
 jobs:
   version:
