--- a/.github/workflows/dumpprcontext.yaml
+++ b/.github/workflows/dumpprcontext.yaml
@@ -2,7 +2,7 @@ name: dump pr context
 
 on:
   pull_request:
-    #types: [auto_merge_enabled]
+    types: [opened, edited, synchronize, reopened]
     branches:
       - main
 
